--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+server.port=8080
+
+spring.datasource.url=jdbc:mysql://localhost:3306/project2?characterEncoding=utf-8
+spring.datasource.password=123456
+spring.datasource.username=root
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
