--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.datasource.url=jdbc:mysql://localhost:3306/project2?characterEncoding=utf
 spring.datasource.password=123456
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+mybatis.type-handlers-package=com.cskaoyan.handler
+spring.mvc.static-path-pattern=/wx/storage/fetch/**
+spring.resources.static-locations=file:d:/
