--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,6 @@ spring.datasource.password=123456
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 logging.level.com.cskaoyan.mapper=debug
-project2.file.path=wx/storage/fetch
 mybatis.type-handlers-package=com.cskaoyan.handler
 spring.mvc.static-path-pattern=/wx/storage/fetch/**
-spring.resources.static-locations=file:d:/
+spring.resources.static-locations=file:d:/pic/
