--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,4 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 logging.level.com.cskaoyan.mapper=debug
 mybatis.type-handlers-package=com.cskaoyan.handler
 spring.mvc.static-path-pattern=/wx/storage/fetch/**
-spring.resources.static-locations=file:d:/pic/
+spring.resources.static-locations=https://mall2.oss-cn-beijing.aliyuncs.com/
